Picture-in-Picture: update status when new player is loaded for a video in PIP.

Bug: 870853
Change-Id: Ib1621a1016d226f03d10a745dfb35a2c9cfe5dec
Reviewed-on: https://chromium-review.googlesource.com/1166337
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Frank Liberato <liberato@chromium.org>
Reviewed-by: apacible <apacible@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581778}