content/browser/media/media_web_contents_observer.cc
@@ -211,6 +211,7 @@ void MediaWebContentsObserver::OnMediaPaused(RenderFrameHost* render_frame_host,
 
   UpdateVideoLock();
 
+  // TODO(872066): check for |pip_player_| fully matching paused player.
   if (!web_contents()->IsBeingDestroyed() && pip_player_.has_value() &&
       pip_player_->render_frame_host == render_frame_host) {
     PictureInPictureWindowControllerImpl* pip_controller =
@@ -266,6 +267,7 @@ void MediaWebContentsObserver::OnMediaPlaying(
     return;
   }
 
+  // TODO(872066): check for |pip_player_| fully matching paused player.
   if (!web_contents()->IsBeingDestroyed() && pip_player_.has_value() &&
       pip_player_->render_frame_host == render_frame_host) {
     PictureInPictureWindowControllerImpl* pip_controller =
