content/browser/picture_in_picture/picture_in_picture_window_controller_impl.cc
@@ -159,6 +159,8 @@ void PictureInPictureWindowControllerImpl::UpdatePlaybackState(
     return;
   }
 
+  DCHECK(media_player_id_.has_value());
+
   window_->SetPlaybackState(is_playing ? OverlayWindow::PlaybackState::kPlaying
                                        : OverlayWindow::PlaybackState::kPaused);
 }
